feat: Improve API key handling and provide fallback
Enhance the geminiService to safely retrieve API keys by checking for `process.env` and Vite's `import.meta.env`. This prevents crashes in browser environments and provides a fallback mechanism. Add an explicit check for the API key before making requests, returning an informative message if it's missing.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ms">
   <head>
@@ -63,5 +62,6 @@
 </head>
   <body class="bg-[#F8FAFC] dark:bg-[#0B1120] text-slate-800 dark:text-slate-100 antialiased font-sans selection:bg-brand-100 selection:text-brand-900">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
