--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
+    <!-- Netlify Identity Widget -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -27,14 +30,14 @@
                 300: '#a5b4fc',
                 400: '#818cf8',
                 500: '#6366f1',
-                600: '#4f46e5', // Primary Indigo
+                600: '#4f46e5',
                 700: '#4338ca',
                 800: '#3730a3',
                 900: '#312e81',
                 950: '#1e1b4b',
               },
               slate: {
-                850: '#151e2e', // Custom darker slate
+                850: '#151e2e',
                 900: '#0F172A',
                 950: '#020617'
               }
@@ -46,13 +49,15 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@6.22.3",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.0",
+    "react": "https://esm.sh/react@18.2.0",
+    "react/": "https://esm.sh/react@18.2.0/",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-dom/": "https://esm.sh/react-dom@18.2.0/",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.22.3?deps=react@18.2.0,react-dom@18.2.0",
+    "@google/genai": "https://esm.sh/@google/genai@1.30.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.454.0?deps=react@18.2.0",
+    "recharts": "https://esm.sh/recharts@2.12.7?deps=react@18.2.0,react-dom@18.2.0",
     "jszip": "https://esm.sh/jszip@3.10.1",
     "pptxgenjs": "https://esm.sh/pptxgenjs@3.12.0?deps=jszip@3.10.1",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.3"
